--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-file",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "/",
   "dependencies": {
     "prop-types": "^15.6.0",
